--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^7.1.0"
   },
   "dependencies": {
-    "element-ui": "^2.4.11"
+    "element-ui": "^2.4.11",
+    "html2canvas": "^1.0.0-alpha.12"
   }
 }
