--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: node_js
 node_js:
-- '10'
+  - '10'
 before_install:
-- openssl aes-256-cbc -K $encrypted_a2c824ace89e_key -iv $encrypted_a2c824ace89e_iv
-  -in id_rsa_blog.enc -out ~/.ssh/id_rsa_blog -d
-- chmod 600 ~/.ssh/id_rsa_blog
-- echo -e "Host 139.129.24.219\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - openssl aes-256-cbc -K $encrypted_a2c824ace89e_key -iv $encrypted_a2c824ace89e_iv
+    -in id_rsa_blog.enc -out ~/.ssh/id_rsa_blog -d
+  - chmod 600 ~/.ssh/id_rsa_blog
+  - echo -e "Host 139.129.24.219\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+
+install:
+  - yarn install
+
+script:
+  - yarn docs:build
 
 after_success:
-# 没有修改过端口的，可以用这个，上传目录要加 -r 参数
-- scp -o stricthostkeychecking=no -r /usr/local/nginx/html/blog.lbinin.com root@lbinin.com
+  - cd docs/.vuepress/dist
+  # 没有修改过端口的，可以用这个，上传目录要加 -r 参数
+  - scp -o stricthostkeychecking=no -r ./* root@lbinin.com:/usr/local/nginx/html/blog.lbinin.com
