--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
     -in id_rsa_blog.enc -out ~/.ssh/id_rsa_blog -d
   - chmod 600 ~/.ssh/id_rsa_blog
   - echo -e "Host 139.129.24.219\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - yarn global add vuepress
 
 install:
   - yarn install
