--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_a2c824ace89e_key -iv $encrypted_a2c824ace89e_iv
   -in id_rsa_blog.enc -out ~/.ssh/id_rsa_blog -d
 - chmod 600 ~/.ssh/id_rsa_blog
-- echo -e "Host 139.129.24.219\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/id_rsa_blog" >> ~/.ssh/config
+- echo -e "Host lbinin.com\n\tStrictHostKeyChecking no\n\tIdentityFile ~/.ssh/id_rsa_blog" >> ~/.ssh/config
 - yarn global add vuepress
 addons:
-  ssh_known_hosts: 139.129.24.219
+  ssh_known_hosts: lbinin.com
 install:
 - yarn install
 script:
